# image_filter

./: BMP.cpp  BMP.h  CMakeLists.txt  Color.h  Image.cpp  Image.h  README.md  filter_blur.cpp  filter_blur.h  filter_crop.cpp  filter_crop.h  filter_edge_detection.cpp  filter_edge_detection.h  filter_grayscale.cpp  filter_grayscale.h  filter_negative.cpp  filter_negative.h  filter_sharpening.cpp  filter_sharpening.h  filters.cpp  filters.h  image_processor.cpp  test.cpp
